# co-fastapi-jwt

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  alembic.ini  docker-compose.yaml  locustfile.py  pyproject.toml
.github/workflows/: pylint.yml  ruff.yml
alembic/: env.py
alembic/versions/: 4e436aafec4a_.py  abd94afc7539_.py
app/: main.py
app/apis/v1/: api.py  auth.py  jwt.py  user.py
app/core/: celery_app.py  config.py
app/db/: base.py  session.py
app/models/: jwt.py  user.py
app/schemas/: jwt.py  user.py
app/services/: jwt.py  user.py
app/tests/: conftest.py
app/tests/apis/v1/: test_auth.py  test_jwt.py  test_root.py  test_user.py
app/tests/services/: test_user.py
envs/: example.env.local
